kubernetes/apps/demo-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app
  namespace: default
  labels:
    app: demo-app
    metrics: "true"
spec:
  selector:
    app: demo-app

  ports:
    - name: http
      port: 80
      targetPort: 8080

    - name: metrics
      port: 8080
      targetPort: 8080
